--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## R files
+
 # History files
 .Rhistory
 .Rapp.history
@@ -34,3 +36,7 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+## Other files
+*.png
+/Older_versions
